<resources>
    <string name="app_name">BookReader</string>
    <string name="enter">Enter</string>
    <string name="home">Home</string>
    <string name="library">Library</string>
    <string name="search">Search</string>
    <string name="Profile">Profile</string>
    <string name="Change_language">Change language</string>
    <string name="contact">Contact us</string>
    <string name="Booked">BOOKED\n</string>
    <string name="cover">cover</string>
    <string name="header">header blurred cover</string>
    <string name="recent_hint">Hop right back in</string>
    <string name="recent_list_hint">Browse recently added books</string>
    <string name="recommendHintTV">Books we think you might enjoy</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="welcome">Greetings!</string>
    <string name="pages_format">pages: %s</string>
    <string name="year_format">year: %s</string>
    <string name="expButton">expand/collapse the description block</string>
    <string name="publisher_format">publisher: %s</string>
    <string name="favorite">add to/remove from favourites</string>
    <string name="download">download button</string>
    <string name="details">view book details</string>
    <string name="read">Read offline</string>
    <string name="search_hint">Got a book in mind?</string>
    <string name="searches">Recent Searches:</string>
    <string name="avatar">user\'s avatar</string>
    <string name="lorem_ipsum">
Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
proident</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <string name="title_dial">oops, something went wrong</string>
    <string name="description_dial">we can\'t open the file because of some error, please make sure the book is downloaded</string>
    <string name="ok">OK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget password?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="i_have_an_account">I have an account</string>
    <string name="sign_up">Sign Up</string>
    <string name="new_password">New Password</string>
    <string name="this_field_can_t_be_empty">This Field can\'t be empty</string>
    <string name="field_not_valid">Field Not Valid</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="changed_password_failed">Changed Password Failed</string>
    <string name="email_or_password_incorrect">email or password incorrect</string>
    <string name="confirm">Confirm</string>
    <string name="reseat_password">Reset Password</string>
    <string name="recent_read_error">Please read something to add it to reading history :)</string>
    <string name="navigation_drawer_open">open drawer</string>
    <string name="navigation_drawer_close">close drawer</string>
    <string name="Privacypolicy">Privacy Policy\n</string>
    <string name="Darkmode">Dark Mode</string>
    <string name="privacypolicycontent">
    Your privacy is important to us.<br />
    This Privacy Policy outlines how your information is collected, used, and protected when you use the Reader App.<br /><br />
    </string>
    <string name="privacypolicycontent1">
    2. How We Use Your Information: We use your information to:<br />
    - Provide, improve, and personalize your reading experience.<br />
    - Send updates, notifications, or respond to inquiries.<br />
    - Enhance app performance and analyze usage patterns.<br /><br />
</string>
    <string name="privacypolicycontent2">
    1. Information We Collect: We may collect the following information to improve your experience:
            - Personal Information: If you create an account, we may collect your name, email address, and password.
           - Usage Information: Information such as your reading preferences, time spent on different sections, and device information to help us improve app performance.
</string>
    <string name="privacypolicycontent3">
    2. How We Use Your Information: We use your information to:<br />
    - Provide, improve, and personalize your reading experience.<br />
    - Send updates, notifications, or respond to inquiries.<br />
    - Enhance app performance and analyze usage patterns.<br /><br />
</string>
    <string name="privacypolicycontent4">

  4. Data Security: We implement industry-standard security measures to safeguard your data. However, no method of transmission over the internet is 100% secure.

</string>
    <string name="privacypolicycontent5">
   5. Your Rights: You have the right to:
           - Access, update, or delete your personal information.
         - Opt-out of any communications.

</string>
    <string name="privacypolicycontent6">

  6. Changes to This Policy: We may update this Privacy Policy from time to time. Any changes will be posted within the app.

</string>
    <string name="privacypolicycontent7">

   Contact Us: If you have any questions about this Privacy Policy, please contact us at (asmaaeltalawy2004@gmail.com).

</string>
    <!--    <string name=" 1. Information We Collect: We may collect the following information to improve your experience:<br />-->
    <!--    - Personal Information: If you create an account, we may collect your name, email address, and password.<br />-->
    <!--    - Usage Information: Information such as your reading preferences, time spent on different sections, and device information to help us improve app performance.<br /><br />-->

    <!--    2. How We Use Your Information: We use your information to:<br />-->
    <!--    - Provide, improve, and personalize your reading experience.<br />-->
    <!--    - Send updates, notifications, or respond to inquiries.<br />-->
    <!--    - Enhance app performance and analyze usage patterns.<br /><br />-->

    <!--    3. Sharing of Information: We do not sell or share your personal information with third parties, except as required by law or to protect our rights.<br /><br />-->

    <!--    4. Data Security: We implement industry-standard security measures to safeguard your data. However, no method of transmission over the internet is 100% secure.<br /><br />-->

    <!--    5. Your Rights: You have the right to:<br />-->
    <!--    - Access, update, or delete your personal information.<br />-->
    <!--    - Opt-out of any communications.<br /><br />-->

    <!--    6. Changes to This Policy: We may update this Privacy Policy from time to time. Any changes will be posted within the app.<br /><br />-->

    <!--    Contact Us: If you have any questions about this Privacy Policy, please contact us at (asmaaeltalawy2004@gmail.com).-->
    <!-- " />-->
    <string name="privacy_policy">Privacy Policy</string>
    <string name="Downloaded_Books_are_Empty">Downloaded Books are Empty</string>
    <string name="Favorite_Books_are_Empty">Favorite Books are Empty</string>
    <string name="Password">New password</string>
    <string name="Username">Username</string>
    <string name="Email">Email</string>
    <string name="Save">Save</string>
    <string name="Edit_Profile">Edit Profile</string>
    <string name="Downloads">Downloads</string>
    <string name="zero">0</string>
    <string name="Favorites">Favorite</string>
    <string name="favorites">Favorites</string>
    <string name="edit_password_content_description">Edit password content description</string>
    <string name="save_button_content_description">Save button</string>
    <string name="edit_email">Edit email</string>
    <string name="edit_username">Edit username</string>
    <string name="current_password">Current password</string>
    <string name="back_button">Back button</string>
    <string name="message_icon">Message Icon</string>
    <string name="The_comment_of_the_user">The comment of the user</string>
    <string name="add_comment">Add Comment</string>
    <string name="comment">Comment</string>
    <string name="submit">Submit</string>
    <string name="loading">Loading...</string>
    <string name="Logout">Logout</string>
    <string name="downloadCounter">Downloaded Books: %d</string>
    <string name="favoriteCounter">Favorite Books: %d</string>

</resources>
