<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:background="@color/theme"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="100dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_16">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/main_text"
                android:text="@string/privacy_policy"
                android:textSize="@dimen/_30sp"
                android:paddingTop="@dimen/padding_16"
                android:paddingBottom="@dimen/padding_16"
                android:textStyle="bold" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary_color"
                android:layout_marginBottom="@dimen/margin_20"
                app:cardCornerRadius="@dimen/_30sp"
                app:cardElevation="4dp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_16"
        android:text="@string/privacypolicycontent"
        android:textColor="@color/main_text"
        android:textSize="@dimen/text_16" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_16"
        android:text="@string/privacypolicycontent2"
        android:textColor="@color/main_text"
        android:textSize="@dimen/text_16" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_16"
        android:text="@string/privacypolicycontent3"
        android:textColor="@color/main_text"
        android:textSize="@dimen/text_16" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_16"
        android:text="@string/privacypolicycontent4"
        android:textColor="@color/main_text"
        android:textSize="@dimen/text_16" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_16"
        android:text="@string/privacypolicycontent5"
        android:textColor="@color/main_text"
        android:textSize="@dimen/text_16" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_16"
        android:text="@string/privacypolicycontent6"
        android:textColor="@color/main_text"
        android:textSize="@dimen/text_16" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_16"
        android:text="@string/privacypolicycontent7"
        android:textColor="@color/main_text"
        android:textSize="@dimen/text_16" />
</LinearLayout>

            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>