<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data></data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/profilebkg"
        tools:context=".ui.theme.views.fragments.EditProfileFragment">

        <!-- Back Arrow ImageButton at the top-left (start) -->
        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/back_button"
            android:src="@drawable/black_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck,RedundantDescriptionCheck" />

        <!-- CardView containing the profile fields -->
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/backButton">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_edittext"
                android:orientation="vertical"
                android:padding="24dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Edit_Profile"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="36sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_edittext"
                    android:drawableStart="@drawable/email_ic"
                    android:drawablePadding="8dp"
                    android:hint="@string/Email"
                    android:inputType="textEmailAddress"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    tools:ignore="Autofill,VisualLintTextFieldSize" />

                <EditText
                    android:id="@+id/editUsername"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_edittext"
                    android:drawableStart="@drawable/person_ic"
                    android:drawablePadding="8dp"
                    android:hint="@string/Username"
                    android:inputType="text"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    tools:ignore="Autofill,VisualLintTextFieldSize" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/currentPassword"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/custom_edittext"
                        android:drawableStart="@drawable/password_ic"
                        android:drawablePadding="8dp"
                        android:hint="@string/current_password"
                        android:inputType="textPassword"
                        android:padding="8dp"
                        android:textColor="@color/black"
                        tools:ignore="Autofill,VisualLintTextFieldSize" />

                    <ImageButton
                        android:id="@+id/toggleCurrentPasswordVisibility"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="8dp"
                        android:background="?attr/selectableItemBackground"
                        android:src="@drawable/visibility_off"
                        tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editPassword"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_edittext"
                    android:drawableStart="@drawable/password_ic"
                    android:drawablePadding="8dp"
                    android:hint="@string/Password"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    tools:ignore="Autofill,VisualLintTextFieldSize" />

                <ImageButton
                    android:id="@+id/toggleNewPasswordVisibility"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="8dp"
                    android:background="?attr/selectableItemBackground"
                    android:src="@drawable/visibility_off"
                    tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </LinearLayout>

                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/pink_background"
                    android:contentDescription="@string/save_button_content_description"
                    android:text="@string/Save"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="RedundantDescriptionCheck,VisualLintButtonSize" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
