<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:background="@drawable/view_info_button">


    <ImageButton
        android:id="@+id/backBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/primary_color"
        android:padding="4dp"
        android:src="@drawable/black_arrow_back"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/add_comment"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/backBT"
        android:hint="@string/comment"
        android:textColorHint="@color/black"
        app:startIconDrawable="@drawable/comment"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine|textCapSentences"
            android:minHeight="48dp"
            android:paddingStart="48dp"
            android:textColor="@color/black"
            tools:ignore="RtlSymmetry,VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submitBT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/comment"
        android:layout_marginTop="20dp"
        android:text="@string/submit"
        android:textStyle="bold"
        android:background="@drawable/black_background"
        android:textColor="@color/primary_color"
        tools:ignore="VisualLintButtonSize" />
</RelativeLayout>