<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/profilebkg"
        tools:context=".ui.theme.views.fragments.ProfileFragment">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImg"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingClass" />

        <TextView
            android:id="@+id/titleName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Username"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/profileImg"
            app:layout_constraintStart_toStartOf="@id/profileImg"
            app:layout_constraintTop_toBottomOf="@id/profileImg" />

        <!-- Common Favorites and Downloads Section -->
        <LinearLayout
            android:id="@+id/favoritesDownloadsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="20dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/titleName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- Favorites -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/favoritesNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textColor="@color/white"
                    android:textSize="26sp"
                    tools:ignore="TextContrastCheck" />
                <TextView
                    android:id="@+id/favoritesLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Favorites"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <!-- Downloads -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/downloadsNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textColor="@color/white"
                    android:textSize="26sp"
                    tools:ignore="TextContrastCheck" />
                <TextView
                    android:id="@+id/downloadsLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Downloads"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>


        <!-- Current User Info (This section is only visible for logged-in users) -->

        <LinearLayout
            android:id="@+id/currentUserInfoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/white_background"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/favoritesDownloadsLayout">

            <!-- Email -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Email"
                    android:textColor="@color/primary_color"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/profileEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/email"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:alpha="0.5"
                android:background="@color/primary_color"
                tools:ignore="ImageContrastCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Username"
                    android:textColor="@color/primary_color"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/profileUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Username"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/editButton"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:background="@drawable/pink_background"
            android:text="@string/Edit_Profile"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/currentUserInfoLayout"
            app:layout_constraintVertical_bias="0.329" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
